--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,12 +51,11 @@ p {
 }
 
 .hero {
-    height: 800px;
-    width: 100%;
+    height: 700px;
+    width: 1600px;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
-    background-position: center;
+    background-position: top;
 }
 
 .float-left {
